code/services/kong/kong-db-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kong-db
  namespace: egov
  labels:
    app: kong-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kong-db
  template:
    metadata:
      labels:
        app: kong-db
    spec:
      containers:
      - name: kong
        image: mithunhegdeegov/gateway-kong:v1.0.0
        ports:
        - containerPort: 8000
          name: proxy
        - containerPort: 8443
          name: proxy-ssl
        - containerPort: 8001
          name: admin
        livenessProbe:
          httpGet:
            path: /status
            port: 8001
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /status
            port: 8001
          initialDelaySeconds: 5
          periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: kong-db-proxy
  namespace: egov
spec:
  type: ClusterIP
  ports:
  - name: proxy-http
    port: 80
    targetPort: 8000
    protocol: TCP
  - name: proxy-https
    port: 443
    targetPort: 8443
    protocol: TCP
  - name: admin
    port: 8001
    targetPort: 8001
    protocol: TCP
  selector:
    app: kong-db
